# C-CPP-Projects

./: README.md
BucketStorage/: CMakeLists.txt  README.md  bucket_iterator.hpp  bucket_storage.hpp  helpers.h  main.cpp  my_stack.hpp  structs.hpp
FFMPEG/: README.md  main.c
FFMPEG/ffmpeg/include/libavutil/: ffversion.h
FFMPEG/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc
Factorial/: README.md  main.c
FloatingPoint-IEEE754/: README.md  main.c
